<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculatrice">

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="viewStart"
        android:textColor="#020202"
        android:textSize="36sp"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintTop_toTopOf="@id/constraintLayout" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        android:background="#2196F3"
        android:clickable="true"
        android:text="@string/button1"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/display" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        android:background="#2196F3"
        android:clickable="true"
        android:text="@string/button2"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/display" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        android:background="#2196F3"
        android:clickable="true"
        android:text="@string/button3"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/display" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        android:background="#2196F3"
        android:clickable="true"
        android:text="@string/buttonPlus"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@id/display"
        app:layout_constraintLeft_toRightOf="@id/constraintLayout"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        android:background="#2196F3"
        android:clickable="true"
        android:text="@string/button4"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        android:background="#2196F3"
        android:clickable="true"
        android:text="@string/button5"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button2"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        android:background="#2196F3"
        android:clickable="true"
        android:text="@string/button6"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button3"/>

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        android:background="#2196F3"
        android:clickable="true"
        android:text="@string/buttonMinus"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@id/buttonPlus"
        app:layout_constraintLeft_toRightOf="@id/constraintLayout"/>
    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        android:background="#2196F3"
        android:clickable="true"
        android:text="@string/button7"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        android:background="#2196F3"
        android:clickable="true"
        android:text="@string/button8"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@id/button5"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        android:background="#2196F3"
        android:clickable="true"
        android:text="@string/button9"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/button6"/>

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        android:background="#2196F3"
        android:clickable="true"
        android:text="@string/buttonMultiply"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintTop_toBottomOf="@id/buttonMinus"
        app:layout_constraintLeft_toRightOf="@id/constraintLayout"/>

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        android:background="#2196F3"
        android:clickable="true"
        android:text="@string/buttonDelete"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/button7"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        android:background="#2196F3"
        android:clickable="true"
        android:text="@string/buttonEquals"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/buttonDelete"
        app:layout_constraintTop_toBottomOf="@id/button8"/>

    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        android:background="#2196F3"
        android:clickable="true"
        android:text="@string/button0"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/buttonEquals"
        app:layout_constraintTop_toBottomOf="@id/button9"
        />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        android:background="#2196F3"
        android:clickable="true"
        android:text="@string/buttonDivide"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintTop_toBottomOf="@id/buttonMultiply"
        app:layout_constraintLeft_toRightOf="@id/constraintLayout"/>


</androidx.constraintlayout.widget.ConstraintLayout>